[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remold"
dynamic = ["version"]
description = "Reshape Python source with LibCST: structure in the tree, comments and whitespace as plain text"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "remold contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["libcst", "ast-grep-py"]

[project.optional-dependencies]
dev = [
  "fastship",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/AnswerDotAI/remold"

[tool.setuptools.dynamic]
version = { attr = "remold.__version__" }

[tool.setuptools.packages.find]
include = ["remold"]
