[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remold"
dynamic = ["version"]
description = "Structural search and rewrite for Python source, with ast-grep pattern rules and LibCST matcher transforms"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "remold contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["libcst", "ast-grep-py"]

[project.optional-dependencies]
dev = [
  "fastship",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/AnswerDotAI/remold"

[project.entry-points.pyskills]
remold = "remold"

[tool.setuptools.dynamic]
version = { attr = "remold.__version__" }

[tool.setuptools.packages.find]
include = ["remold"]
